--- a/nablaweb/templates/accounts/list.html
+++ b/nablaweb/templates/accounts/list.html
@@ -5,18 +5,14 @@
 
 <h2>Komponenter og nullvektorer</h2>
 <br />
-<table id="user_list" width="100%">
+<table id="user_list" class="table table-condensed table-striped table-bordered" width="100%">
 <thead>
-    <th>Bilde</th>
 	<th>Brukernavn</th>
 	<th>Navn</th>
 	<th>Grupper</th>
 </thead>
 {% for user in users %}
 	<tr class="{% cycle odd even %}">
-        <td class="cell_avatar">
-            {% avatar user 30 %}
-        </td>
 		<td >
 		{# Brukernavn med lenke til profilen #}
 			<a href="{% url accounts.views.view_member_profile user.username %}">
