--- a/nablaweb/templates/comments/list.html
+++ b/nablaweb/templates/comments/list.html
@@ -3,25 +3,37 @@
 {% load wordbreak %}
 
 {% for comment in comment_list %}
-<div class="comment" id="c{{ comment.id }}">
-    <div class="avatar">
-        {% avatar comment.user.username 60 %}
-    </div>
 
-    <div class="bubble_container">
-        <div class="bubble_arrow"></div>
-        <div class="bubble">
-            <div class="info">
-                <span class="name">{{ comment.user.get_full_name }}</span> 
-                <span class="namedatedivider">sa</span>
-                <span class="date">{{ comment.submit_date|naturalday }}</span>:
+<hr>
+
+<div class="row comment" id="c{{ comment.id }}">
+
+            <div class="avatar span1">
+                {% avatar comment.user.username 60 %}
             </div>
-            <div class="text">
-                {% load markup %}
-                {# Urlize er en extension som gjør linker klikkbare. Failer silently #}
-                {{ comment.comment|markdown:"safe,urlize" }}
+
+            <div class="span7">
+                
+                <div class="text">
+                    <div class="info">
+                        <span class="author">
+                            <a href="{% url accounts.views.view_member_profile comment.user.username %}">
+                                {{ comment.user.get_full_name }} 
+                            </a>
+                        </span>
+                        <span class="date">{{ comment.submit_date|naturalday }}</span>
+                    </div>
+                    {% load markup %}
+                    {# Urlize er en extension som gjør linker klikkbare. Failer silently #}
+                    {{ comment.comment|markdown:"safe,urlize" }}
+
+                    {# urlize.py hentes fra https://github.com/r0wb0t/markdown-urlize #}
+                    {# og puttes i /usr/lib/pymodules/python2.7/markdown/extensions #}
+                </div>
+
             </div>
-        </div>
-    </div>
+
 </div>
+
+
 {% endfor %}
