--- a/nablaweb/templates/accounts/view_member_profile.html
+++ b/nablaweb/templates/accounts/view_member_profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load avatar_tags %}
-{% load bbcode %}
+{% load markup %}
 
 {% block title %}Medlem: {{member.get_full_name }} {% endblock %}
 
@@ -56,6 +56,6 @@
 
 </div>
 
-<div id="user_about">{{ member.get_profile.about|bbcode }}</div>
+<div id="user_about">{{ member.get_profile.about|markdown }}</div>
 
 {% endblock %}
