--- a/nablaweb/templates/com/com_details.html
+++ b/nablaweb/templates/com/com_details.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ block.super }}{{ com.com.group.name }}{% endblock %}
+{% block title %}}{{ com.com.group.name }}{% endblock %}
 
 {% block content %}
 <h2>{{ com.com.group.name }}</h2>
