--- a/nablaweb/templates/news/news_detail.html
+++ b/nablaweb/templates/news/news_detail.html
@@ -1,16 +1,32 @@
 {% extends "base.html" %}
 {% load markup %}
 {% load humanize %}
+{% load comments %}
 
 {% block content %}
 
-<img alt="" src="{{ news.picture.url }}">
+<img alt="header" src="{{ news.picture.url }}">
 <h2>{{ news.headline }}</h2>
 {{ news.lead_paragraph|markdown }}
 {{ news.body|markdown }}
 
-{% endblock %}
+{# Comments #}
+    {% get_comment_count for news as comment_count %}
 
+    {% if comment_count > 0 %}
+        <h3 class="comments-header">Kommentarer</h3>
+    {% endif %}
+
+    {% render_comment_list for news %}
+
+    {% if user.is_authenticated %}
+        {% render_comment_form for news %}
+    {% else %}
+        <p class="well">Logg inn for å skrive en kommentar</p>
+    {% endif %}
+{# end Comments #}
+
+{% endblock %}
 
 
 
@@ -124,7 +140,7 @@
     <tfoot>
         <tr><td colspan="2">
             <a href="{% url event_detail event.id %}" class="btn primary">Les mer</a>
-            <a href="#notimplemented" class="btn"><span class="icon custom facebook"></span> Vis på Facebook</a>
+            <a href="#notimplemented" class="btn"><span class="icon-custom icon-facebook"></span> Vis på Facebook</a>
         </td></tr>
     </tfoot>
 
@@ -133,10 +149,10 @@
 <!-- end relaterte events -->
 
 <div class="well" style="padding: 8px 0;">
-    <ul class="nav list">
+    <ul class="nav nav-list">
         <li class="nav-header">Admin</li>
-        <li><a href="#endre"><i class="icon pencil"></i> Endre</a></li>
-        <li><a href="#slett"><i class="icon trash"></i> Slett</a></li>
+        <li><a href="#endre"><i class="icon-pencil"></i> Endre</a></li>
+        <li><a href="#slett"><i class="icon-trash"></i> Slett</a></li>
     </ul>
 </div>
 
