--- a/nablaweb/templates/news/news_detail.html
+++ b/nablaweb/templates/news/news_detail.html
@@ -5,7 +5,10 @@
 
 {% block content %}
 
-<img alt="header" src="{{ news.picture.url }}">
+{% if news.picture %}
+    <img alt="header" src="{{ news.picture.url }}">
+{% endif %}
+
 <h2>{{ news.headline }}</h2>
 {{ news.lead_paragraph|markdown }}
 {{ news.body|markdown }}
